package game;

public enum GameState {
    TITLE,
    LOAD,
    PLAY,
    PAUSE,
    DIALOGUE,
    CHARACTER,
    DEBUG,
    GAME_OVER,
    TRADE,
    SAVE;
}